--- a/docroot/themes/custom/tower_health/templates/content/node--service--image-box-reference.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--service--image-box-reference.html.twig
@@ -70,6 +70,12 @@
  *   in different view modes.
  */
 #}
+{% if node.field_service_card_image is not empty %}
+  {% set src = file_url(node.field_service_card_image.entity.field_media_image.entity.uri.value|image_style('image_card')) %}
+{% else %}
+  {% set src = "" %}
+{% endif %}
+
 {% include '@organisms/image-box-link/image-box-link.twig' with {
   "title": label,
   "text": content.field_service_card_desc,
@@ -78,7 +84,7 @@
     "text": content.field_service_card_cta
   },
   "img": {
-    "src": file_url(node.field_service_card_image.entity.field_media_image.entity.uri.value|image_style('image_card')),
+    "src": src,
     "alt": node.field_service_card_image.entity.field_media_image.entity.alt.value
   }
 }%}
