--- a/docroot/themes/custom/tower_health/templates/block/block--views-exposed-filter-block--article-listing-article-listing-page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--views-exposed-filter-block--article-listing-article-listing-page.html.twig
@@ -32,7 +32,7 @@
     {{ drupal_block('clear_filters') }}
   {% endblock %}
   {% block filter_items %}
-    <div class="form-section">
+    <div class="form-section news">
       {{ form_sections }}
     </div>
 {% endblock %}
