Fix homepage hero block.

--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--homepage-hero.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--homepage-hero.html.twig
@@ -45,7 +45,7 @@
   "subtitle": content.field_hero_hp_subtitle,
 } %}
   {% block form %}
-    {{ drupal_entity('block', 'exposedformfind_a_providerfind_doctor') }}
+    {{ drupal_entity('block', 'providerhomeheroblock') }}
   {% endblock %}
 
   {% block image_background %}
