Fix prototype button_icon and header css.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -21,7 +21,7 @@
       {% for link in links %}
         {% include "@atoms/icon-button/icon-button.twig" with {
           "url": link.url,
-          "icon": link.icon,
+          "button_icon": link.button_icon,
           "text": link.text,
           "animated": "true",
           "variation": "list"
