--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/care-circle.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/care-circle.twig
@@ -16,20 +16,26 @@
       </h2>
     </div>
     {% endif %}
-    
+
     <ul class="care-circle__list">
-      {% for item in items %}
-        {% include "@molecules/care-circle-item/care-circle-item.twig" with {
-          "icon": item.icon,
-          "icon_alt": item.icon_alt,
-          "url": item.url,
-          "label": item.label,
-          "color": item.color
-        } %}
-      {% endfor %}
+      {% block care_circle_items %}
+      
+        {% for item in items %}
+          {% include "@molecules/care-circle-item/care-circle-item.twig" with {
+            "icon": item.icon,
+            "icon_alt": item.icon_alt,
+            "url": item.url,
+            "label": item.label,
+            "color": item.color
+          } %}
+        {% endfor %}
+
+        {% endblock %}
+
     </ul>
+
   </div>
-  
+
   {% if content %}
   <div class="care-circle__text">
     {% if content.title %}
@@ -38,7 +44,7 @@
     {{ content.text }}
   </div>
   {% endif %}
-  
+
 {% if fullWidth == true %}
   </div>
 </div>
