Update review listing prototype to use stars.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
@@ -23,7 +23,8 @@
         {% include "@molecules/review/review.twig" with {
           rating: item.rating,
           review: item.review,
-          date: item.date
+          date: item.date,
+          icon: icon
        } %}
       </li>
     {% endfor %}
