--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -63,7 +63,8 @@
     } %}
 
     {% include "@organisms/review-listing/review-listing.twig" with {
-      count: review_amt
+      count: review_amt,
+      icon: "star.svg"
     } %}
 
   {% endblock %}
