--- a/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
@@ -43,12 +43,19 @@
  * @see html.html.twig
  */
 #}
-{% set full_with = 'false' %}
 
-{% include "@pages/_page.twig" with {
-  page_header: page.page_header,
-  page_content: page.content,
-  full_content: page.full_content,
-  top_sidebar:  page.sidebar_first ?? '',
-  bottom_sidebar:  page.sidebar_second ?? '',
-}%}
+{% if show_side_nav == 0 %}
+  {% include "@pages/_page.twig" with {
+    page_header: page.page_header,
+    page_content: page.content,
+    full_content: page.full_content,
+  }%}
+{% elseif show_side_nav == 1 %}
+  {% include "@pages/_page.twig" with {
+    page_header: page.page_header,
+    page_content: page.content,
+    full_content: page.full_content,
+    top_sidebar:  page.sidebar_first ?? '',
+    bottom_sidebar:  page.sidebar_second ?? '',
+  }%}
+{% endif %}
