fix page template so top sidebar displays

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -12,7 +12,7 @@
     {% include "@organisms/provider-header/provider-header.twig" %}
   {% endblock %}
 
-  {% block top_page_sidebar %}
+  {% block top_sidebar %}
     <div class="sidebar--growth js-section-animation">
       {% include "@molecules/provider-details/provider-details.twig" with {
         detail: language,
