Fix pager and other theming fixees.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -126,6 +126,13 @@
     height: 50px;
   }
 
+  .facets-widget-chosen-dropdown {
+    visibility: hidden;
+    &.js-complete {
+      visibility: visible;
+    }
+  }
+
   .chosen-container-single .chosen-single,
   .chosen-container-multi .chosen-choices {
     padding: .65em 1.35em 0 1em;
