--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -16,6 +16,7 @@
               "button_icon": directions.button_icon,
               "text": directions.text,
               "variation": directions.variation,
+              "target": directions.target,
             } %}
           </div>
         </div>
