--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="teaser__link--small">
-      <a class="teaser__link" href="{{cta.url}}">{{ cta.label }} {% include "@base/icons/arrow.svg" %} </a>
+      <a class="teaser__link" href="{{cta.url}}" target="_blank">{{ cta.label }} {% include "@base/icons/arrow.svg" %} </a>
     </div>
   </div>
 </div>
