--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -37,6 +37,7 @@
         "url": location.link.href,
         "icon": location.link.icon,
         "text": location.link.text,
+        "target": location.link.target,
         "variation": "small",
       } %}
     </div>
