--- a/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
@@ -32,6 +32,6 @@
   {{ title_prefix }}
   {{ title_suffix }}
   {% block content %}
-    {{ content|without('find_location_search')}}
+    {{ content }}
   {% endblock %}
 </div>
