--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -73,7 +73,7 @@
 
 {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig" with {
     "name": label,
-    "address_rows": [address1, address2],
+    "address_rows": [address_1, address_2],
     "direction_url": href,
     "button_icon": button_icon,
     "phones": [
