--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -79,16 +79,17 @@
       },
       "details": {
         "name": label,
-        "address1": address1,
-        "address2": address2,
+        "address1": address_1,
+        "address2": address_2,
         "phone": phone,
         "fax": fax,
         "hours": hours,
       },
       "link": {
         "href": href,
-        "text": "Directions"|t,
+        "text": "Map & Directions"|t,
         "icon": icon,
+        "target": "_blank",
       }
     }
 } %}
