change 'provider' to 'doctor in many places

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
@@ -9,7 +9,7 @@
 		<tr>
 			<th class="table__heading-cell">Date</th>
       <th colspan="2" class="table__heading-cell">Topic</th>
-      <th class="table__heading-cell">Provider</th>
+      <th class="table__heading-cell">Doctor</th>
 		</tr>
 	</thead>
 	<tbody>
