--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -21,7 +21,7 @@
         {% block form %}
           <form class="homepage-hero__content__form">
             {% include "@molecules/autocomplete-dropdown/autocomplete.twig" %}
-            <button class="button button--primary" type="submit">Search Providers</button>
+            <button class="button button--primary" type="submit">Search Doctors</button>
           </form>
         {% endblock %}
       </div>
