update find provider page with new filters & fix broken listing items

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -179,6 +179,11 @@
   .form-item--checkbox__item {
     display: inline-block;
   }
+  
+  .form-item--radios,
+  .form-item--checkboxes {
+    @include adjust-font-size-to($sm-text, .9);
+  }
 
   @include breakpoint($bp3) {
     .form-item--inline,
