--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -10,7 +10,7 @@
   <div class="teaser__rating">
     {% include "@molecules/ratings-count/ratings-count.twig" with {
       "rating": provider.details.rating,
-      "icon": provider.details.icon,
+      "rating_icon": provider.details.rating_icon
     } %}
   </div>
   {% endif %}
