--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
@@ -33,7 +33,7 @@
     margin-bottom: .5em;
   }
 
-  span {
+  span:not(span.teaser__section):not(.provider-detail__item-label) {
     @include adjust-font-size-to($label, .695);
     font-style: italic;
     display: block;
