--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -22,7 +22,16 @@
       <div class="provider-header__card-info">
         <h1 class="provider-header__name">{{ name }}</h1>
         {% if lead_title %}
-        <span class="provider-header__title">{{ lead_title }}</span>
+        <span class="provider-header__title">
+          {% if type != 'Doctor' %}
+          {{ type }}
+          {% endif %}
+          {% if type != 'Doctor' and lead_title %}
+            <span class="divider">&#8226;</span>
+          {% endif %}
+          
+          {{ lead_title }}
+        </span>
         {% endif %}
 
         {% if provider_video %}
@@ -43,7 +52,7 @@
         {% include "@atoms/icon-button/icon-button.twig" with {
           text: appt_label,
           url: appt_url,
-          icon: appt_icon
+          button_icon: appt_icon
         } %}
         <span class="provider-header__cta__text">
         or call <a class="provider-header__cta__link" href="tel+1{{appt_phone.number}}">{{ appt_phone.label }}</a>
