--- a/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
@@ -82,7 +82,7 @@
     "url": href,
     "button_icon": button_icon,
     "text": "Map & Directions"|t,
-    "variation": small
+    "variation": "small"
   },
   "phones": [
     {
