--- a/docroot/themes/custom/tower_health/templates/fields/field--field-services-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-services-ref.html.twig
@@ -38,6 +38,6 @@
 #}
 
 {% include "@molecules/link-list/link-list.twig" with {
-  "title": "Services we Offer"|t,
+  "title": "Services We Offer"|t,
   "items": services
 } %}
