--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/_hours-block.scss
@@ -1,5 +1,9 @@
 .hours-block {
-  margin-top: 2em;
+  margin: 2em 0;
+
+  @include breakpoint($bp3) {
+    margin-bottom: 0;
+  }
 }
 
 .hours-block__label {
@@ -15,7 +19,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  
+
   @include breakpoint($bp1 $bp3) {
     display: flex;
     flex-wrap: wrap;
@@ -28,12 +32,12 @@
 
   span {
     font-weight: 700;
-    
+
     @include breakpoint($bp1 $bp2) {
       display: block;
     }
   }
-  
+
   @include breakpoint($bp1 $bp3) {
     width: 48%;
   }
