--- a/docroot/themes/custom/tower_health/templates/content/node--location--image-box-reference.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--image-box-reference.html.twig
@@ -70,8 +70,11 @@
  *   in different view modes.
  */
 #}
+
 {% if node.field_location_card_image is not empty %}
   {% set src = file_url(node.field_location_card_image.entity.field_media_image.entity.uri.value|image_style('image_card')) %}
+{% elseif node.field_location_image is not empty %}
+  {% set src = file_url(node.field_location_image.entity.field_media_image.entity.uri.value|image_style('image_card')) %}
 {% else %}
   {% set src = "" %}
 {% endif %}
@@ -84,7 +87,6 @@
     "text": content.field_location_card_cta
   },
   "img": {
-    "src": src,
-    "alt": node.field_location_card_image.entity.field_media_image.entity.alt.value
+    "src": src
   }
 }%}
