--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -244,12 +244,12 @@
   @include breakpoint($bp3) {
     margin-bottom: .25em;
   }
-  
+
   a:link,
   a:visited {
     text-decoration: none;
   }
-  
+
   a:active,
   a:hover,
   a:focus {
@@ -370,6 +370,7 @@
 // Simple variation styles
 .teaser--simple {
   max-width: 1100px;
+  width: 100%;
   margin: 0 auto;
   margin-top: 1.5em;
   margin-bottom: 2.5em;
