--- a/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
@@ -84,25 +84,7 @@
     "text": "Map & Directions"|t,
     "variation": "small"
   },
-  "phones": [
-    {
-      "label": "Main"|t,
-      "numbers": [
-        {
-          "number": phone
-        }
-      ]
-    },
-    {
-      "label": "Appointments"|t,
-      "numbers": [
-        {
-          "number": appointment_phone,
-          "label": appointment_phone_label
-        }
-      ]
-    }
-  ],
+  "phones": phones,
   "img": {
     "src": src,
     "alt": alt
