--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
@@ -35,7 +35,8 @@
       {% for key, item in item.children %}
         {% include "@atoms/05-forms/radio/_radio-item.twig" with {
         "radio_item": item.title,
-        "radio_id": item.id
+        "radio_id": item.id,
+        "checked": item.checked
         } %}
       {% endfor %}
     </ul>
@@ -45,6 +46,7 @@
         {% include "@atoms/05-forms/checkbox/_checkbox-item.twig" with {
         "checkbox_item": item.title,
         "checkbox_id": item.id,
+        "checked": item.checked
         } %}
       {% endfor %}
     </ul>
