add breadcrumb class

--- a/docroot/themes/custom/tower_health/templates/navigation/breadcrumb.html.twig
+++ b/docroot/themes/custom/tower_health/templates/navigation/breadcrumb.html.twig
@@ -8,4 +8,6 @@
  */
 #}
 
-{% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" %}
+{% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
+    "class": "hero"
+}%}
