fix template based on change in drupal

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -28,7 +28,7 @@
     } %}
   {% endblock %}
   
-  {% block bottom_page_sidebar %}
+  {% block bottom_sidebar %}
     {% include "@molecules/sidebar-card/card--sidebar.twig" with {
       title: sidebarCard.title,
       desc: sidebarCard.desc,
