--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
@@ -2,10 +2,10 @@
   width: 100%;
   margin-bottom: 2em;
   text-align: center;
-  padding: 0 1em;
+  padding: 0;
   
   @include breakpoint($bp2) {
-    flex: 0 1 49%;
+    flex: 0 1 48%;
     width: auto;
     
     &:nth-child(1):nth-last-child(1) {
@@ -16,11 +16,11 @@
   }
     
   @include breakpoint($bp3) {
-    flex: 0 1 32%;
+    flex: 0 1 31%;
     
     &:nth-child(1):nth-last-child(2),
     &:nth-child(2):nth-last-child(1) {
-      flex: 0 1 49%;
+      flex: 0 1 48%;
     }
     
     &:nth-child(1):nth-last-child(1) {
@@ -29,17 +29,17 @@
   }
   
   @include breakpoint($bp5) {
-    flex: 0 1 24%;
+    flex: 0 1 23%;
     
     &:nth-child(1):nth-last-child(3),
     &:nth-child(2):nth-last-child(2),
     &:nth-child(3):nth-last-child(1) {
-      flex: 0 1 32%;
+      flex: 0 1 31%;
     }
     
     &:nth-child(1):nth-last-child(2),
     &:nth-child(2):nth-last-child(1) {
-      flex: 0 1 49%;
+      flex: 0 1 48%;
     }
     
     &:nth-child(1):nth-last-child(1) {
