--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/recognition-row/_recognition-row.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/recognition-row/_recognition-row.scss
@@ -7,6 +7,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100%;
 }
