--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--care-circle.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--care-circle.html.twig
@@ -39,7 +39,7 @@
 
 {% include "@organisms/care-circle/care-circle.twig" with {
   "title": content.field_care_circle_title,
-  "url": content.field_care_circle_title_link.0.url,
+  "url": content.field_care_circle_title_link.0['#url'],
   "content": {
     "title": content.field_care_circle_text_title,
     "text": content.field_care_circle_description
