--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -259,13 +259,15 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center 90%;
-  padding: 1em .5em 0 .5em;
+  padding: 0 .5em;
+  margin: 0 1.5em 0 .5em;
 
   @include breakpoint(0 899px) {
     position: absolute;
     top: -5px;
     right: 0;
     padding: .5em;
+    margin: 0 .75em;
   }
 
   &:link,
