Change location facet to be by ID for location instead of title.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
@@ -11,7 +11,7 @@
         {% include "@atoms/icon-button/icon-button.twig" with {
           "url": direction_url,
           "icon": 'th-find-hospital.svg',
-          "text": 'Directions',
+          "text": 'Map & Directions',
           "variation": "small",
           "target": "_blank"
         } %}
