update video cards to have type -- from drupal change

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
@@ -12,7 +12,7 @@
     } %}
   {% endblock %}
   
-  {% block top_page_sidebar %}
+  {% block top_sidebar %}
     {% include "@templates/_place-holder.twig" with {
       "place_holder": "Navigation",
     } %}
@@ -22,7 +22,7 @@
     {% include "@molecules/rich-text/rich-text.twig" %}
   {% endblock %}
   
-  {% block bottom_page_sidebar %}
+  {% block bottom_sidebar %}
     {% include "@templates/_place-holder.twig" with {
       "place_holder": "Optional Sidebar Content",
     } %}
