--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--video.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/card-group--video.twig
@@ -5,7 +5,8 @@
       thumbnail: card.thumbnail,
       doctor: card.doctor,
       title: card.title,
-      desc: card.desc
+      desc: card.desc,
+      type: card.type
     } %}
   {% endfor %}
 </section>
