fix dropdown arrow display for filters

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
@@ -13,10 +13,10 @@
     top: 42%;
     right: .65em;
     z-index: 2;
+    display: block;
 
     /* These hacks make the select behind the arrow clickable in some browsers */
     pointer-events: none;
-    display: none;
   }
 }
 
