--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
@@ -38,6 +38,7 @@
   appearance: none;
   background: none;
   border: none;
+  display: none;
 }
 
 @supports ( -webkit-appearance: none ) or ( appearance: none ) or ( ( -moz-appearance: none ) and ( mask-type: alpha ) ) {
