fix template data based on drupal changes

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
@@ -25,7 +25,7 @@
     } %}
   {% endblock %}
 
-  {% block top_page_sidebar %}
+  {% block top_sidebar %}
     {% include "@molecules/sidebar-cta-list/sidebar-cta-list.twig" with {
       cta_list: cta_list
     }%}
