fix templates based on drupal template change

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--tech.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail--tech.twig
@@ -11,7 +11,7 @@
     {% include "@organisms/basic-header/basic-header.twig" %}
   {% endblock %}
   
-  {% block top_page_sidebar %}
+  {% block top_sidebar %}
     {% include "@molecules/sidebar-cta-list/sidebar-cta-list.twig" with {
       cta_list: cta_list
     }%}
