add location teaser icon back due to drupal data change

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -35,7 +35,7 @@
     <div class="teaser__button">
       {% include "@atoms/icon-button/icon-button.twig" with {
         "url": location.link.href,
-        "icon": location.link.icon,
+        "button_icon": location.link.icon,
         "text": location.link.text,
         "target": location.link.target,
         "variation": "small",
