fix file download cta data yml based on drupal changes

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -71,7 +71,7 @@
       image: file.image,
       title: file.title,
       desc: file.desc,
-      downloadLabel: file.downloadLabel
+      file: file.file
     } %}
     
     {% include "@organisms/box-links/box-links.twig" with {
