adjust the menu so it functions better at mobile and prevents background scrolling

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -8,9 +8,9 @@
     flex-direction: column;
     height: 100vh;
     left: 0;
-    top: 100%;
+    top: 100px;
     overflow-y: scroll;
-    position: absolute;
+    position: fixed;
     right: 0;
     width: 100%;
 
