fix sidebar animation at mobile

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -224,11 +224,15 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
   }
   
   .cssanimations & {
-    opacity: 0;
+    @include breakpoint($bp2) {
+      opacity: 0;
+    }
   }
   
   .cssanimations &.in-view {
-    animation: fadeInRight .5s ease forwards;
+    @include breakpoint($bp2) {
+      animation: fadeInRight .5s ease forwards;
+    }
   }
 }
 
