remove duplicate crumbs on basic page

--- a/docroot/themes/custom/tower_health/templates/navigation/breadcrumb.html.twig
+++ b/docroot/themes/custom/tower_health/templates/navigation/breadcrumb.html.twig
@@ -8,6 +8,4 @@
  */
 #}
 
-{% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
-    "class": "hero"
-}%}
+{% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" %}
