adjust basic header spacing and styles for mobile

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -175,7 +175,7 @@
     background-color: $primary-dark;
     padding: 2.35em 2em 2.35em 0;
     border-radius: 0 $rd-brd-lg $rd-brd-lg 0;
-    bottom: -100px;
+    top: 100px;
 
     &::before {
       position: absolute;
@@ -194,7 +194,7 @@
     }
 
     @include breakpoint($bp2) {
-      bottom: auto;
+      top: auto;
       background-color: rgba($primary-dark, .9);
 
       &::before {
@@ -217,10 +217,10 @@
   }
 
   .basic-header--img.basic-header--cta & {
-    bottom: -175px;
+    top: 175px;
 
     @include breakpoint($bp3) {
-      bottom: auto;
+      top: auto;
     }
 
     @include breakpoint($bp4) {
