--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -195,7 +195,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
 
 .sidebar--growth {
   background-color: $growth-ltst;
-  padding: 1.5em 0 1.5em 1.5em;
+  padding: 1em 1.25em;
   margin-bottom: 2em;
   position: relative;
   border-radius: $rd-brd-lg;
@@ -203,6 +203,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
   @include breakpoint($bp3) {
     border-radius: $rd-brd-lg 0 0 $rd-brd-lg;
     margin-bottom: 0;
+    padding: 1.5em 0 1.5em 1.5em;
   }
   
   &::after {
