--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-list/_sidebar-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-list/_sidebar-list.scss
@@ -23,7 +23,8 @@
 }
 
 .sidebar-list__list-item {
-  margin-bottom: .25em;
+  @include adjust-leading-to(.85);
+  margin-bottom: .5em;
   break-inside: avoid;
   
   a:link,
