fix rating icon data

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
@@ -24,7 +24,7 @@
           rating: item.rating,
           review: item.review,
           date: item.date,
-          icon: icon
+          rating_icon: icon
        } %}
       </li>
     {% endfor %}
